# mavericks-golang

./: CMakeLists.txt  VERSION
.github/workflows/: release.yml
patches/126/: 0001-make-bash-bootstrap-ldflags.patch  0002-cmd-dist-buildtool-bootstrap-ldflags.patch  0003-runtime-osinit-hack-version-guard.patch  0004-runtime-cgo-no-unknown-pragmas.patch  0005-macos-sectrustsettings-wrappers.patch  0006-macos-sectrustsettings-trampolines.patch  0007-root-keychainunion.patch  0008-root-keychainunion-darwin.patch  0009-root-keychainunion-test.patch  0010-verify-distrust-veto.patch
release-notes/: 1.26.4-mavericks.1.md
scripts/resources/: Welcome.html
test/: compat-guard.sh  smoke-mavericks.sh
test/hello-cgo/: main.go
test/trust/: rename-check.sh  smoke-trust.sh  verify_tls.go
updater/: ICON-CREDIT.txt  ed25519_key.pub  mavericks-go-updater.icns
